--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Smart Site</string>
+    <string name="home">首頁</string>
+    <string name="history">歷史數據</string>
+    <string name="setup">設定</string>
 </resources>
